--- a/docs/source/support.html.md.erb
+++ b/docs/source/support.html.md.erb
@@ -4,7 +4,7 @@ weight: 5
 ---
 
 # Support
-
-If you have any questions or suggestions [contact us](mailto:becomingateacher@digital.education.gov.uk) at <becomingateacher@digital.education.gov.uk>.
+If you have any questions or suggestions please complete this [feedback form](https://forms.gle/syqb5Fa9RSbo2WC1A) or
+[contact us](mailto:becomingateacher@digital.education.gov.uk) at <becomingateacher@digital.education.gov.uk>.
 
 We’ll try to get back to you within two working days.
