--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,16 +1,44 @@
 <!DOCTYPE html>
-<html>
+<html lang="en" class="govuk-template ">
   <head>
-    <title>TeacherTrainingApi</title>
-    <meta name="viewport" content="width=device-width,initial-scale=1">
+    <title><%= content_for(:page_title) %> - Publish teacher training courses - GOV.UK</title>
     <%= csrf_meta_tags %>
     <%= csp_meta_tag %>
-
-    <%= stylesheet_link_tag 'application', media: 'all', 'data-turbolinks-track': 'reload' %>
-    <%= javascript_pack_tag 'application', 'data-turbolinks-track': 'reload' %>
+    <%= tag :meta, name: "viewport", content: "width=device-width, initial-scale=1" %>
+    <%= tag :meta, property: "og:image", content: asset_pack_path("media/images/govuk-opengraph-image.png") %>
+    <%= tag :meta, name: "theme-color", content: "#0b0c0c" %>
+    <%= tag :meta, name: "ROBOTS", content: "NOINDEX, NOFOLLOW" %>
+    <%= favicon_link_tag asset_pack_path("media/images/favicon.ico") %>
+    <%= favicon_link_tag asset_pack_path("media/images/govuk-mask-icon.svg"), rel: "mask-icon", type: "image/svg", color: "#0b0c0c" %>
+    <%= favicon_link_tag asset_pack_path("media/images/govuk-apple-touch-icon.png"), rel: "apple-touch-icon", type: 'image/png' %>
+    <%= favicon_link_tag asset_pack_path("media/images/govuk-apple-touch-icon-152x152.png"), rel: "apple-touch-icon", type: "image/png", size: "152x152" %>
+    <%= favicon_link_tag asset_pack_path("media/images/govuk-apple-touch-icon-167x167.png"), rel: "apple-touch-icon", type: "image/png", size: "167x167" %>
+    <%= favicon_link_tag asset_pack_path("media/images/govuk-apple-touch-icon-180x180.png"), rel: "apple-touch-icon", type: "image/png", size: "180x180" %>
+    <%= stylesheet_pack_tag "application", media: "all" %>
   </head>
 
-  <body>
-    <%= yield %>
+  <body class="govuk-template__body <%= content_for(:body_classes) %>">
+    <script>
+      document.body.className = ((document.body.className) ? document.body.className + ' js-enabled' : 'js-enabled');
+    </script>
+
+    <a href="#main-content" class="govuk-skip-link">Skip to main content</a>
+
+    <%= render partial: 'layouts/header' %>
+
+    <div class="govuk-width-container">
+      <%#%= render partial: 'layouts/beta-banner' %>
+      <%= yield(:before_content) %>
+
+      <main class="govuk-main-wrapper" id="main-content" role="main">
+        <%= render partial: "layouts/flash" if flash.any? %>
+        <%= yield %>
+      </main>
+    </div>
+
+    <%= render partial: 'layouts/footer' %>
+
+    <%= javascript_pack_tag 'application' %>
+    <%= yield(:before_body_close) %>
   </body>
 </html>
