Remove API is not implemented statement

--- a/docs/source/index.html.md.erb
+++ b/docs/source/index.html.md.erb
@@ -10,10 +10,8 @@ teacher training course information API.
 
 ## API Status
 
-The API spec is unstable and subject to change. It is being published
+The API spec is subject to change. It is being published
 to get feedback from external parties.
-
-The API is also not yet implemented.
 
 ## What this API is for
 
@@ -55,4 +53,3 @@ header.
 
 We will update our [release notes](./release-notes.html) with all breaking
 and non-breaking changes.
-
