--- a/app/views/gias/dashboard.html.erb
+++ b/app/views/gias/dashboard.html.erb
@@ -1,18 +1,37 @@
 <h1>GIAS Data</h1>
 
-<dl class="govuk-summary-list">
-    <div class="govuk-summary-list__row">
-        <dt class="govuk-summary-list__key">Total Providers</dt>
-        <dd class="govuk-summary-list__value"><%= @providers.count %></dd>
-    </div>
+<table class="govuk-table govuk-!-margin-bottom-8">
+    <tbody class="govuk-table__body">
+    <tr class="govuk-table__row">
+        <th class="govuk-table__header govuk-!-width-one-third">Total Providers</th>
+        <td class="govuk-table__cell govuk-!-width-one-third"><%= @providers.count %></td>
+        <td class="govuk-table__cell govuk-!-width-one-third">
+            <%= link_to("View Providers", gias_providers_path) %>
+        </td>
+    </tr>
 
-    <div class="govuk-summary-list__row">
-        <dt class="govuk-summary-list__key">Providers that match Establishments using Postcode</dt>
-        <dd class="govuk-summary-list__value"><%= @providers_with_matching_establishments_by_postcode.count %></dd>
-    </div>
-</dl>
+    <tr class="govuk-table__row">
+        <th class="govuk-table__header govuk-!-width-one-third">Total GIAS Establishments</th>
+        <td class="govuk-table__cell govuk-!-width-one-third"><%= GIASEstablishment.count %></td>
+        <td class="govuk-table__cell govuk-!-width-one-third">
+            <%= link_to("View GIAS Establishments", gias_establishments_path) %>
+        </td>
+    </tr>
 
-<%= link_to("Import Establishments",
+    <tr class="govuk-table__row">
+        <th class="govuk-table__header govuk-!-width-one-third">
+            Providers that match establishments using postcode</th>
+        </th>
+        <td class="govuk-table__cell govuk-!-width-one-third">
+            <%= @providers_with_matching_establishments_by_postcode.count %>
+        </td>
+        <td class="govuk-table__cell govuk-!-width-one-third"></td>
+    </tr>
+    </tbody>
+</table>
+
+
+<%= link_to("Import GIAS Establishments",
             gias_import_establishments_path,
             class: "govuk-button",
             data: {
