add name matching to dashboard and import

--- a/app/views/gias/dashboard.html.erb
+++ b/app/views/gias/dashboard.html.erb
@@ -15,7 +15,7 @@ summary
             <%= link_to "Total GIAS Establishments", gias_establishments_path %>
         </dt>
         <dd class="govuk-summary-list__value">
-            <%= @providers.count %>
+            <%= @establishments.count %>
         </dd>
     </div>
 
@@ -36,6 +36,16 @@ summary
         </dt>
         <dd class="govuk-summary-list__value">
             <%= @providers_with_sites_that_match_by_postcode.count %>
+        </dd>
+    </div>
+
+    <div class="govuk-summary-list__row">
+        <dt class="govuk-summary-list__key">
+            <%= link_to "Providers that match Establishments by Name",
+                        gias_providers_that_match_by_name_path %>
+        </dt>
+        <dd class="govuk-summary-list__value">
+            <%= @providers_that_match_by_name.count %>
         </dd>
     </div>
 </dl>
