--- a/app/views/gias/providers/show.html.erb
+++ b/app/views/gias/providers/show.html.erb
@@ -10,32 +10,37 @@
         <dt class="govuk-summary-list__key">Postcode</dt>
         <dd class="govuk-summary-list__value">
             <%= link_to @provider.postcode,
-                        gias_postcode_path(postcode: @provider.postcode) %>
+             gias_postcode_path(postcode: @provider.postcode) %>
         </dd>
     </div>
 </dl>
 
-<h2>GIAS Establishment Postcode Matches</h2>
+<% if @provider.establishments_matched_by_postcode.any? %>
+<h2>Establishments That Match By Postcode</h2>
 
 <ul class="govuk-list">
-<% @matches[:establishments][:postcode].each do |establishment| %>
+<% @provider.establishments_matched_by_postcode.each do |establishment| %>
     <li>
         <%= link_to establishment.name, gias_establishment_path(establishment.urn) %>
     </li>
 <% end %>
 </ul>
+<% end %>
 
-<h2>GIAS Establishment Name Matches</h2>
+<% if @provider.establishments_matched_by_name.any? %>
+<h2>Establishments That Match By Name</h2>
 
 <ul class="govuk-list">
-<% @matches[:establishments][:name].each do |establishment| %>
+<% @provider.establishments_matched_by_name.each do |establishment| %>
     <li>
         <%= link_to establishment.name, gias_establishment_path(establishment.urn) %>
     </li>
 <% end %>
 </ul>
+<% end %>
 
-<h2>Sites Matching GIAS Establishment</h2>
+<% if @provider.establishments_matched_by_name %>
+<h2>Sites That Match Establishments By Postcode</h2>
 
 <table class="govuk-table">
     <thead class="govuk-table__head">
@@ -46,14 +51,14 @@
     </thead>
 
     <tbody class="govuk-table__body">
-    <% @matches[:establishments][:site_postcode].each do |site, establishments| %>
+      <% @provider.sites_with_establishments_matched_by_postcode.each do |site| %>
         <tr class="govuk-table__row">
             <td class="govuk-table__cell">
                 <%= govuk_link_to site.location_name, gias_site_path(site) %>
             </td>
             <td class="govuk-table__cell">
                 <ul class="govuk-list">
-                <% establishments.each do |establishment| %>
+                <% site.establishments_matched_by_postcode.each do |establishment| %>
                     <li>
                         <%= govuk_link_to establishment.name, gias_establishment_path(establishment.urn) %>
                     </li>
@@ -64,3 +69,4 @@
     <% end %>
     </tbody>
 </table>
+<% end %>
