--- a/app/views/gias/providers/index.html.erb
+++ b/app/views/gias/providers/index.html.erb
@@ -8,7 +8,10 @@
               Provider
           </th>
           <th class="govuk-table__header allocation-report__status" scope="col">
-              Matching Establishments
+              Matching Establishments by Name
+          </th>
+          <th class="govuk-table__header allocation-report__status" scope="col">
+              Matching Establishments by Postcode
           </th>
       </tr>
   </thead>
@@ -19,14 +22,32 @@
           <td class="govuk-table__cell">
               <%= provider.provider_code %>
           </td>
+
           <td class="govuk-table__cell">
               <%= link_to provider.provider_name, gias_provider_path(provider.id) %>
           </td>
+
+          <td class="govuk-table__cell">
+              <% if provider.establishments_matched_by_name.any? %>
+              <ul class="govuk-list">
+                  <% provider.establishments_matched_by_name.each do |establishment| %>
+                      <li>
+                          <%= govuk_link_to establishment.name,
+                                            gias_establishment_path(establishment.urn) %>
+                      </li>
+                  <% end %>
+              </ul>
+              <% end %>
+
+              <% if provider.sites_with_establishments_matched_by_name.any? %>
+                  <em><%= govuk_link_to "#{provider.sites_with_establishments_matched_by_name.count} site(s) that match",
+                       gias_provider_path(provider) %></em>
+              <% end %>
+          </td>
+
           <td class="govuk-table__cell">
 
-              <% if provider.establishments_matched_by_postcode.any? || provider.sites_with_establishments_matched_by_postcode.any? %>
-              <h4 class="govuk-!-margin-top-0 govuk-!-margin-bottom-2">By Postcode</h4>
-
+              <% if provider.establishments_matched_by_postcode.any? %>
               <ul class="govuk-list">
                   <% provider.establishments_matched_by_postcode.each do |establishment| %>
                       <li>
@@ -38,21 +59,8 @@
               <% end %>
 
               <% if provider.sites_with_establishments_matched_by_postcode.any? %>
-                  <em><%= govuk_link_to "#{provider.sites_with_establishments_matched_by_postcode.count} establishment(s) match sites",
-                                        gias_provider_path(provider) %></em>
-              <% end %>
-
-              <% if provider.establishments_matched_by_name.any? %>
-              <h4 class="govuk-!-margin-bottom-2">By Name</h4>
-
-              <ul class="govuk-list">
-                  <% provider.establishments_matched_by_name.each do |establishment| %>
-                      <li>
-                          <%= govuk_link_to establishment.name,
-                                            gias_establishment_path(establishment.urn) %>
-                      </li>
-                  <% end %>
-              </ul>
+              <em><%= govuk_link_to "#{provider.sites_with_establishments_matched_by_postcode.count} site(s) that match",
+                                    gias_provider_path(provider) %></em>
               <% end %>
           </td>
       </tr>
