--- a/app/views/gias/providers/index.html.erb
+++ b/app/views/gias/providers/index.html.erb
@@ -1,3 +1,5 @@
+<%= govuk_link_to "Back to Dashboard", gias_dashboard_path %>
+
 <div class="govuk-grid-row">
     <div class="govuk-grid-column-one-quarter">
         <%= form_with(model: @filter_object,
