--- a/app/views/gias/establishments/index.html.erb
+++ b/app/views/gias/establishments/index.html.erb
@@ -11,6 +11,12 @@
           <th class="govuk-table__header" scope="col">
               Establishment
           </th>
+          <th class="govuk-table__header" scope="col">
+              Matching Providers or Sites by Name
+          </th>
+          <th class="govuk-table__header" scope="col">
+              Matching Providers or Sites by Postcode
+          </th>
       </tr>
   </thead>
 
@@ -23,6 +29,56 @@
 
           <td class="govuk-table__cell">
               <%= link_to establishment.name, gias_establishment_path(establishment.id) %>
+          </td>
+
+          <td class="govuk-table__cell">
+              <% if establishment.providers_matched_by_name.any? || establishment.sites_matched_by_name.any? %>
+              <h4>Matched Providers</h4>
+              <ul class="govuk-list">
+                  <% establishment.providers_matched_by_name.each do |provider| %>
+                      <li>
+                          <%= govuk_link_to(provider.provider_name, gias_provider_path(provider)) %>
+                      </li>
+                  <% end %>
+              </ul>
+              <% end %>
+
+              <% if establishment.sites_matched_by_name.any? %>
+              <h4>Matched Provider Sites</h4>
+              <ul class="govuk-list">
+                  <% establishment.sites_matched_by_name.each do |site| %>
+                      <li>
+                          <%= govuk_link_to("#{site.provider.provider_name}: #{site.location_name}",
+                                            gias_provider_path(site.provider)) %>
+                      </li>
+                  <% end %>
+              </ul>
+              <% end %>
+          </td>
+
+          <td class="govuk-table__cell">
+              <% if establishment.providers_matched_by_postcode.any? || establishment.sites_matched_by_postcode.any? %>
+              <h4>Matched Providers</h4>
+              <ul class="govuk-list">
+                  <% establishment.providers_matched_by_postcode.each do |provider| %>
+                      <li>
+                          <%= govuk_link_to(provider.provider_name, gias_provider_path(provider)) %>
+                      </li>
+                  <% end %>
+              </ul>
+              <% end %>
+
+              <% if establishment.sites_matched_by_postcode.any? %>
+              <h4>Matched Provider Sites</h4>
+              <ul class="govuk-list">
+                  <% establishment.sites_matched_by_postcode.each do |site| %>
+                      <li>
+                          <%= govuk_link_to("#{site.provider.provider_name}: #{site.location_name}",
+                                            gias_provider_path(site.provider)) %>
+                      </li>
+                  <% end %>
+              </ul>
+              <% end %>
           </td>
 
       </tr>
